# data-studio

./: .env.example  .gitignore  CLAUDE.md  README.md  drizzle.config.ts  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
docs/: README.md  architecture.md  data-sources.md  development.md  features.md  gap-analysis.md  results-table.md  roadmap-v2.md  roadmap.md  security.md  workflows.md
scripts/: migrate-datasources.ts
src/: auth.config.ts  auth.ts  middleware.ts
src/app/: global-error.tsx  globals.css  layout.tsx
src/app/(app)/: WorkspaceProvider.tsx  error.tsx  layout.tsx  page.tsx  providers.tsx
src/app/(public)/: error.tsx  layout.tsx
src/app/invite/: layout.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/: CommandMenu.tsx
src/components/audit/: AuditLogView.tsx
src/components/auth/: AuthShell.tsx  Field.tsx
src/components/dashboard/: AddWidgetDialog.tsx  CreateDashboardDialog.tsx  DashboardFilterContext.tsx  DashboardGrid.tsx  DashboardList.tsx  DashboardPanel.tsx  DashboardTabs.tsx  DashboardView.tsx  DashboardWidget.tsx  FilterBar.tsx  FilterEditor.tsx  PublicDashboardView.tsx  (+2 more)
src/hooks/: useAnalyticsEngine.ts  useDashboard.ts  useDashboardList.ts  useDataSources.ts  useQueryScheduler.test.ts  useQueryScheduler.ts  useQueryWorkspace.ts
src/lib/: onboarding.test.ts  onboarding.ts  utils.ts
src/types/: next-auth.d.ts
src/workers/: chart.worker.ts  sql.worker.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
(+224 files in other folders)
